# openbook2-anchor-gen

./: Cargo.toml
programs/bubblegum/: idl.json
programs/openbook2/: Cargo.toml  idl.json
programs/openbook2/src/: lib.rs
