cargo-features = ["workspace-inheritance"]

[package]
name = "openbook2-cpi"
version = "0.9.2"
edition = "2021"
description = "Anchor CPI client for OpenBook v2 program"
authors = []
repository = "https://github.com/anselsol/openbook2-anchor-gen"
license = "Apache-2.0"
keywords = ["solana", "anchor", "cpi", "openbook"]

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen.workspace = true
anchor-lang.workspace = true
solana-program.workspace = true
